--- a/src/blocks/page-footer/page-footer.pug
+++ b/src/blocks/page-footer/page-footer.pug
@@ -18,7 +18,7 @@ mixin page-footer(mods)
     }
 
   footer.page-footer(class=allMods, role='contentinfo')&attributes(attributes)
-    .page-footer__inner.flex.flex-col.items-center.md_grid.md_items-start
+    .page-footer__inner.flex.flex-col.items-center.md_grid.md_items-start.md_gap-x-20px
       block
 
 
