--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -59,7 +59,7 @@
     background-color: $tw-gray-200;
   }
 
-  @media (min-width: $screen-xl) {
+  @media (min-width: $screen-md) {
     width: 57px;
     height: 51px;
   }
