--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -3,19 +3,19 @@
 //   outline: 1px solid red;
 // }
 
-body  * {
-  background-color: transparent !important;
-  outline: 1px solid red;
-  color: red !important;
-}
+// body  * {
+//   background-color: transparent !important;
+//   outline: 1px solid red;
+//   color: red !important;
+// }
 
-.section__inner {
-  outline: 2px solid green !important;
-}
+// .section__inner {
+//   outline: 2px solid green !important;
+// }
 
-img {
-  opacity: 0;
-}
+// img {
+//   opacity: 0;
+// }
 
 // .product-info__view {q
 //   opacity: 0;
