--- a/src/blocks/article-preview/article-preview.scss
+++ b/src/blocks/article-preview/article-preview.scss
@@ -35,6 +35,7 @@
     @media (min-width: $items2-width) {
       display: flex;
       flex-direction: column;
+      width: 100%;
     }
 
     @media (min-width: $screen-xxl) {
@@ -44,7 +45,7 @@
 
   &__img {
     max-width: 100%;
-    height: 179px;
+    height: 169px;
     overflow: hidden;
 
     @media (min-width: 480px) {
