--- a/src/blocks/product-card/product-card.pug
+++ b/src/blocks/product-card/product-card.pug
@@ -23,7 +23,7 @@ mixin product-card(props={}, mods)
       a.product-card__img(href="#")
         img.lazyload(data-src=props.url)
       a.product-card__title(href="#")= props.title
-      .product-card__desc= props.desc
+      .product-card__desc!= props.desc
       .product-card__price= props.price
       +product-actions
       //- .product-card__actions
