--- a/src/blocks/product-card/product-card.scss
+++ b/src/blocks/product-card/product-card.scss
@@ -55,6 +55,10 @@
       color: currentColor;
       opacity: 0.7;
     }
+
+    @media (min-width: $screen-xxl) {
+      margin-bottom: 2px;
+    }
   }
 
   &__desc {
