--- a/src/blocks/product-info/product-info.scss
+++ b/src/blocks/product-info/product-info.scss
@@ -16,8 +16,10 @@
   }
 
   @media (min-width: $screen-lg) {
+    height: 100%;
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto auto;
+    // grid-template-rows: auto 1fr auto;
     // grid-template-columns: 500px 1fr;
     grid-template-columns: 52% 1fr;
     gap: 0 30px;
@@ -105,6 +107,8 @@
     }
 
     @media (min-width: $screen-lg) {
+      display: flex;
+      align-items: center;
       // min-height: 771px;
     }
   }
@@ -124,6 +128,8 @@
       // margin-right: 30px;
       width: 500px;
       height: auto;
+      justify-content: center;
+      align-self: center;
     }
 
     @media (min-width: $screen-xxl) {
@@ -233,6 +239,12 @@
     svg {
       width: 20px;
       height: 19px;
+    }
+  }
+
+  .section__header {
+    @media (min-width: $screen-lg) {
+      align-self: flex-end;
     }
   }
 }
