--- a/src/blocks/slider-main/slider-main.scss
+++ b/src/blocks/slider-main/slider-main.scss
@@ -24,7 +24,8 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      z-index: 99;
+      // z-index: 99;
+      z-index: 9;
 
       @media (min-width: $screen-xl) {
         top: 65px;
@@ -115,8 +116,10 @@
   }
 
   &__item {
-    padding-bottom: 1px;
     display: none !important;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 1px;
 
     &:first-child {
       display: inline-block !important;
@@ -126,8 +129,9 @@
       display: inline-block !important;
     }
 
-    width: 100%;
-    height: 100%;
+    @media (min-width: $screen-lg) {
+      overflow: hidden;
+    }
 
     & #{$block-name}__item-inner {
       height: 100%;
@@ -188,7 +192,7 @@
       opacity: 1;
     }
 
-    @media (min-width: $screen-xl) {
+    @media (min-width: $screen-md) {
       width: 80px;
       height: 80px;
     }
@@ -200,6 +204,12 @@
       @media (min-width: $screen-lg) {
         padding: 9px 18px;
       }
+    }
+  }
+
+  &__text {
+    p {
+      color: $tw-gray-500;
     }
   }
 }
