--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -19,7 +19,7 @@ block nav
   +main-nav-mobile()(class="lg_hidden order-last")
   +search-form
     +action-btn-svg('search', {w: '21', h: '20'}, 'search')(id="btnSearch" class="search-form__btn" type="button")
-  +action-btn-svg('user', {w: '18', h: '20'},'user')(class="mr-15px")
+  +action-btn-svg('user', {w: '18', h: '20'},'user')(class="mr-18px lg_mr-15px")
   +switcher({name: 'Ru'})(class="mr-25px hidden xxl_block text-lg" id="switcherLangTop")
     +switcher-item({name: 'Ru', code: 'ru', value: ''})
     +switcher-item({name: 'En', code: 'en', value: ''})
@@ -166,39 +166,39 @@ block content
               +areas-item({url: 'img/area-sport.jpg',caption: 'Спорт'})
               +areas-item({url: 'img/area-vet.jpg',caption: 'Ветеринария'})
             input.areas__range.field-range(type="range" class="mt-10px")
-      section.section.section-main.section--catalog.pt-40px.lg_pt-0(data-page='catalog' id='catalog')
+      section.section.section-main.section--catalog.pt-50px.lg_pt-0(data-page='catalog' id='catalog')
         .section__inner
           .section__content.section__container.container
             .product-catalog
-              h2.section__title.mb-0.mt-0.xxl_mb-10px Каталог аппаратов
+              h2.section__title.mb-0.mt-0.xxl_mb-7px Каталог аппаратов
               +btn('Все аппараты','simple')(class="pt-3px")
               .product-list.mt-20px
                 +product-card(
                   {
                     url: './img/product.jpg',
                     title: 'РИКТА-04/4',
-                    desc: 'Без возрастных ограничений. С регулировкой мощности Без возрастных ограничений. С регулировкой мощности Без возрастных ограничений. С регулировкой мощности.',
+                    desc: 'Без возрастных ограничений. С&nbsp;регулировкой мощности Без возрастных ограничений.<br/>С&nbsp;регулировкой мощности.',
                     price: '44 800 ₽'
                   })(class="slider__item")
                 +product-card(
                   {
                     url: './img/product.jpg',
                     title: 'РИКТА 04/4 (универсальный)',
-                    desc: 'Комплектация: "Универсальный" Без возрастных ограничений. С регулировкой мощности',
+                    desc: 'Комплектация: "Универсальный" Без возрастных ограничений. С&nbsp;регулировкой мощности',
                     price: '74 600 ₽'
                   })(class="slider__item")
                 +product-card(
                   {
                     url: './img/product.jpg',
                     title: 'рикта-эсмил(1)а',
-                    desc: 'Портативный. Работает от аккумулятора Без возрастных ограничений. С регулировкой мощности',
+                    desc: 'Портативный. Работает от аккумулятора Без возрастных ограничений. С&nbsp;регулировкой мощности',
                     price: '98 200 ₽'
                   })(class="slider__item")
                 +product-card(
                   {
                     url: 'http://placekitten.com/300/300',
                     title: 'рикта-тест',
-                    desc: 'Без возрастных ограничений. С регулировкой мощности Без возрастных ограничений. С регулировкой мощности',
+                    desc: 'Без возрастных ограничений. С регулировкой мощности Без возрастных ограничений. С&nbsp; регулировкой мощности',
                     price: '98 200 ₽'
                   })(class="slider__item")
       section.section.section-main.section--service.pt-60px.lg_pt-0(data-page='service' id='service')
@@ -211,19 +211,19 @@ block content
                       '/img/service-3x.jpg 1992w'
               })
               ul.service__list.pl-0.text-black
-                li.service__item.flex.items-center.mb-20px.lg_pb-18px.lg_mb-20px
-                  i.icon_service-tech.shrink-0.mr-20px
+                li.service__item.flex.items-center.mb-18px.lg_mb-20px.lg_pb-18px.lg_mb-20px
+                  i.icon_service-tech.shrink-0.mr-12px.lg_mr-20px
                   span Тех.обслуживание производителем
-                li.service__item.flex.items-center.mb-20px.lg_pb-18px.lg_mb-20px
-                  i.icon_service-garant.shrink-0.mr-20px
+                li.service__item.flex.items-center.mb-18px.lg_mb-20px.lg_pb-18px.lg_mb-20px
+                  i.icon_service-garant.shrink-0.mr-12px.lg_mr-20px
                   span Гарантия два года
-                li.service__item.flex.items-center.mb-20px.lg_pb-18px.lg_mb-20px
-                  i.icon_service-delivery.shrink-0.mr-20px
+                li.service__item.flex.items-center.mb-18px.lg_mb-20px.lg_pb-18px.lg_mb-20px
+                  i.icon_service-delivery.shrink-0.mr-12px.lg_mr-20px
                   span Бесплатная доставка
-                li.service__item.flex.items-center.mb-20px.lg_pb-18px.lg_mb-20px
-                  i.icon_service-change.shrink-0.mr-20px
+                li.service__item.flex.items-center.mb-18px.lg_mb-20px.lg_pb-18px.lg_mb-20px
+                  i.icon_service-change.shrink-0.mr-12px.lg_mr-20px
                   span Обмен старых аппаратов со скидкой
-      section.section.section-main.section--reviews.pt-60px.lg_pt-0(data-page='reviews' id='reviews')
+      section.section.section-main.section--reviews.pt-20px.lg_pt-0(data-page='reviews' id='reviews')
         .section__inner
           .section__content
             .section__container.container
@@ -239,7 +239,7 @@ block content
       section.section.section-main.section--articles.pt-40px.lg_pt-0(data-page='articles' id='articles')
         .section__inner
           .section__content.section__container.container
-              h2.section__title.mb-0.lg_mb-0.lg_mt-0.xxl_mb-10px Новости и статьи
+              h2.section__title.mt-0.mb-5px.lg_mb-0.lg_mt-0.xxl_mb-10px Новости и статьи
               +btn('Все статьи','simple').mb-20px.shrink-0
               .article-preview__list-wrapper
                 .article-preview__list.slider
@@ -255,7 +255,7 @@ block content
                         +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px xxl_shrink-0")
                   .article-preview.slider__item.xxl_w-397px
                     .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
-                      .article-preview__img.xxl_shrink(class="h-[57%]")
+                      .article-preview__img.xxl_shrink(class="xxl_h-[57%]")
                         img.lazyload(data-src="img/article-2.jpg")
                       .article-preview__text.xxl_pt-30px.xxl_shrink-0
                         .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
@@ -274,7 +274,7 @@ block content
                         +btn('Подробнее','simple')(class="text-md mt-10px xxl_mt-20px")
                   .article-preview.slider__item.xxl_w-397px
                     .article-preview__inner.xxl_flex.xxl_flex-col.xxl_h-full
-                      .article-preview__img.xxl_shrink(class="h-[57%]")
+                      .article-preview__img.xxl_shrink(class="xxl_h-[57%]")
                         img.lazyload(data-src="img/article-2.jpg")
                       .article-preview__text.xxl_pt-30px.xxl_shrink-0
                         .article-preview__date.text-base.text-gray-300.mb-10px 15 марта 2022
@@ -292,10 +292,10 @@ block content
       .section.page__footer-wrapper.mt-60px.lg_mt-0
         +page-footer()
           .page-footer__contacts.xxl_ml-60px.xxl_justify-self-end.xxl_mt-20px
-            .page-footer__phone.text-xl #[a(href='tel:+70000000000') +7 000 000 00 00]
+            .page-footer__phone.text-xl #[a(href='tel:+70000000000') 8 800 200 57 30]
             .page-footer__hours.text-sm.text-gray-500 пн-пт 10:00 – 18:00
-            .page-footer__address.mt-5px 111020, г. Москва, ул. Боровая, д. 7, стр. 7.
-            .page-footer__socials.flex.justify-between.mt-20px
+            .page-footer__address.mt-7px 111020, г. Москва, <br class="hidden xxl_block"/>ул. Боровая, д. 7, стр. 7.
+            .page-footer__socials.flex.justify-between.mt-24px
               +page-footer__social-icon({icon: 'mail', url: 'mail.ru', w: '22', h: '19'})
               +page-footer__social-icon({icon: 'youtube', url: 'mail.ru', w: '19', h: '16'})
               +page-footer__social-icon({icon: 'fb', url: 'mail.ru', w: '17', h: '18'})
@@ -304,18 +304,18 @@ block content
               +page-footer__social-icon({icon: 'ok', url: 'mail.ru', w: '11', h: '18'})
               +page-footer__social-icon({icon: 'tg', url: 'mail.ru', w: '18', h: '15'})
               +page-footer__social-icon({icon: 'rutube', url: 'mail.ru', w: '57', h: '14'})
-          .page-footer__disclaim.xxl_mt-110px
-            div.mt-20px.md_mt-0.text-15.xxl_text-2xl.opacity-30 ВСЯ ИНФОРМАЦИЯ, РАЗМЕЩЕННАЯ НА САЙТЕ, НОСИТ ОЗНАКОМИТЕЛЬНЫЙ ХАРАКТЕР И НЕ МОЖЕТ СЛУЖИТЬ ЗАМЕНОЙ ОЧНОЙ КОНСУЛЬТАЦИИ ВРАЧА
-            div.mt-10px.xxl_mt-0.font-base Вся представленная на сайте информация, касающаяся наличия на складе, стоимости товаров, носит информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса РФ.
+          .page-footer__disclaim.xxl_mt-115px
+            div.mt-12px.md_mt-0.text-15.xxl_text-2xl.opacity-30 ВСЯ ИНФОРМАЦИЯ, РАЗМЕЩЕННАЯ НА САЙТЕ, НОСИТ ОЗНАКОМИТЕЛЬНЫЙ ХАРАКТЕР И НЕ МОЖЕТ СЛУЖИТЬ ЗАМЕНОЙ ОЧНОЙ КОНСУЛЬТАЦИИ ВРАЧА
+            div.mt-10px.xxl_mt-5px.text-base Вся представленная на сайте информация, касающаяся наличия на складе, стоимости товаров, носит информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса РФ.
           .page-footer__info
-            .flex.mt-10px.ml-30px.md_mt-0.xxl_ml-0
+            .flex.mt-10px.md_mt-0.xxl_ml-0
               +svg('logo-img','',{width: 63, height: 39})(class="mr-10px")
               +switcher({name: 'Россия / русский'})(class="page-footer__lang-switcher text-white" id="switcherLangFooter")
                 +switcher-item({name: 'Россия / русский', code: 'ru', value: '', check: true})
                 +switcher-item({name: 'Britain / English', code: 'en', value: '', check: true})
                 +switcher-item({name: 'Китай / китайский', code: 'ch', value: '', check: true})
             +btn('Политика конфиденциальности','simple')(href="#" class="page-footer__policy mt-10px text-base text-white border-color-gray-500")
-            .mt-5px © 2022 ООО «Риктамед»
+            .mt-10px © 2022 ООО «Риктамед»
           +footer-nav({title: 'Каталог'},'catalog')(class="hidden md_block")
             +footer-nav-item({name: 'РИКТА-ЭСМИЛ (2А)-01', url: '#'})
             +footer-nav-item({name: 'РИКТА-ЭСМИЛ (2А)-03', url: '#'})
@@ -341,7 +341,7 @@ block content
             +footer-nav-item({name: 'О компании ', url: '#'})
             +footer-nav-item({name: 'Отзывы', url: '#'})
             +footer-nav-item({name: 'Контакты', url: '#'})
-          +footer-nav({title: 'Сотрудничество'},'coop')(class="hidden xl_block xxl_ml-80px")
+          +footer-nav({title: 'Сотрудничество'},'coop')(class="hidden xl_flex")
             +footer-nav-item({name: 'Дилерам', url: '#'})
             +footer-nav-item({name: 'Врачам', url: '#'})
             +footer-nav-item({name: 'Комплектование ЛПУ', url: '#'})
