--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -50,46 +50,46 @@
   }
 
   &::before {
-      // z-index: -1;
-      // position: absolute;
-      // left: 0;
-      // top: -1504px; //new mobile whitout image
-      // top: -1800px; //new 1440
-      // top: -1324px; //product 1440
-      // top: -1668px; //service mobile
-      // top: -1140px; //reviews mobile
-      // top: -1245px;//prodcut-info mobile
-      // top: -1160px;// areas mobile
-      // top: -1155px;// articles mobile
-      // top: -872px; //fotter mobile
-      // top: -1332px; //new 1440
-      // top: -1462px;// areas 1440
-      // top: -1725px; //catalog main
-      // top: -1920px; //service 1440
-      // top: -2115px; //reviews 1440
-      // top: -2330px;// articles 1440
-      // top: -2395px; //footer 1440
-      // top: 1270px; //features page
-      // top: 2950px; //catalog page
-      // top: 3642px; //service page
-      // top: 4333px; //reviews page
-      // top: 1885px; //news page
-      // top: -170px; //features 1440
-      // top: -2600px; //catalog mobile
-      // top: -63px; //news widthoug align-items: center
-      // top: -1290px; //articles mobile
-      // top: -1250px; //footer mobile
-      // top: -1230px; //news mobile
-      // top: 0;
-      // // left: 64px;//footer main
-      // // top: -140px; //main test features
-      // // top: 32px; //mobile test features
-      // // top: -10px; //mobile-menu
-      // // top: -815px; //vacancies
-      // // top: -275px;
-      // //top: -5280px;
-      // content: url('../screens/news.jpg');
-      // opacity: 1;
+      z-index: -1;
+      position: absolute;
+      left: 0;
+      top: -1504px; //new mobile whitout image
+      top: -1800px; //new 1440
+      top: -1324px; //product 1440
+      top: -1668px; //service mobile
+      top: -1140px; //reviews mobile
+      top: -1245px;//prodcut-info mobile
+      top: -1160px;// areas mobile
+      top: -1155px;// articles mobile
+      top: -872px; //fotter mobile
+      top: -1332px; //new 1440
+      top: -1462px;// areas 1440
+      top: -1725px; //catalog main
+      top: -1920px; //service 1440
+      top: -2115px; //reviews 1440
+      top: -2330px;// articles 1440
+      top: -2395px; //footer 1440
+      top: 1270px; //features page
+      top: 2950px; //catalog page
+      top: 3642px; //service page
+      top: 4333px; //reviews page
+      top: 1885px; //news page
+      top: -170px; //features 1440
+      top: -2600px; //catalog mobile
+      top: -63px; //news widthoug align-items: center
+      top: -1290px; //articles mobile
+      top: -1250px; //footer mobile
+      top: 0;
+      top: -1230px; //news mobile
+      // left: 64px;//footer main
+      // top: -140px; //main test features
+      // top: 32px; //mobile test features
+      // top: -10px; //mobile-menu
+      // top: -815px; //vacancies
+      // top: -275px;
+      //top: -5280px;
+      // content: url('../screens/main-mobile.jpg');
+      opacity: 1;
   }
 
   &__inner {
