--- a/src/blocks/areas/areas.scss
+++ b/src/blocks/areas/areas.scss
@@ -15,6 +15,10 @@
     margin-right: -10px;
   }
 
+  @media (min-width: $screen-lg) {
+    width: 100%;
+  }
+
   &__inner {
     @media (min-width: $screen-lg) {
       display: grid;
