--- a/src/blocks/cart/cart.scss
+++ b/src/blocks/cart/cart.scss
@@ -68,9 +68,10 @@
 
     & #{$block-name}__section {
       max-width: 320px;
+      opacity: 1;
 
       &::after {
-        opacity: 1;
+        // opacity: 1;
       }
     }
   }
@@ -148,6 +149,7 @@
     justify-content: center;
     transition: all 0.6s;
     line-height: 0;
+    opacity: 0;
 
     &::after {
       content: '';
@@ -158,7 +160,7 @@
       top: 50%;
       transform: translateY(-50%);
       background-color: $tw-gray-200;
-      opacity: 0;
+      // opacity: 0;
       transition: all 0.6s;
     }
 
