--- a/src/blocks/slider-main/slider-main.scss
+++ b/src/blocks/slider-main/slider-main.scss
@@ -9,7 +9,7 @@
   height: 100%;
 
   &__wrapper {
-    height: 100%;//!
+    height: 100%;
     position: relative;
     padding-bottom: 30px;
     font-size: 18px;
@@ -24,7 +24,6 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      // z-index: 99;
       z-index: 9;
 
       @media (min-width: $screen-xl) {
@@ -46,6 +45,10 @@
       }
     }
 
+    .tns-outer {
+      position: relative;
+      z-index: 1;
+    }
   }
 
   &__inner {
@@ -212,6 +215,7 @@
       color: $tw-gray-500;
     }
   }
+
 }
 
 
