--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -95,9 +95,9 @@ block content
                 +btn('Все аппараты','simple')(class="pt-3px")
               .product-info__views-wrapper
                 .product-info__views-list.slider
-                  +product-info-view
-                  +product-info-view
-                  +product-info-view
+                  +product-info-view({id: 'product_info_001'})
+                  +product-info-view({id: 'product_info_002'})
+                  +product-info-view({id: 'product_info_003'})
                 //- input.product-info__range.field-range(type="range" class="mt-10px")
               .product-info__text-wrapper
                 .product-info__text-list.slider
@@ -351,4 +351,6 @@ block content
 //-   p footer
 
 block prepend page-bottom
+  script
+    //- | window.CI360 = { notInitOnLoad: true }
   script(src='https://cdn.scaleflex.it/plugins/js-cloudimage-360-view/3.0.3/js-cloudimage-360-view.min.js')
